<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AEGIS Companion</string>
    <string name="edit_message">Enter a message.</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

     <!--Navigation strings-->
    <string name="action_cardViewer">Card Viewer</string>
    <string name="action_teamViewer">Team Viewer</string>
    <string name="action_teamBuilder">Team Builder</string>
    <string name="action_probabilityCalculator">Probability Calculator</string>

    <!--Card viewer manu sorting-->
    <string name="sort_name">Sort Name</string>
    <string name="sort_energy">Sort Energy</string>
    <string name="sort_type">Sort Type</string>

    <string name="title_activity_display_message">Results</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_main_menu">Main Menu</string>
    <string name="title_activity_activity_main_activity">Dice Calculator</string>
    <string name="title_activity_card_viewer_menu">Card Viewer</string>
    <string name="title_activity_card_viewer">Card Viewer</string>
    <string name="title_activity_unit_check_box_item">Unit CheckBox Item</string>
    <string name="title_activity_build_team_list_view">Build Team</string>
    <string name="title_activity_team_viewer_menu">Team Viewer</string>
    <string name="title_activity_team_viewer">Team Viewer</string>
    <string name="title_activity_action_bar">ActionBar</string>
    <string name="title_activity_ability_index_menu">Ability Index</string>

</resources>
